利用url地址进行权限控制和自定义登陆成功和失败OK

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <p>欢迎</p>
+<a href="/syslog">日志管理</a><br/>
+<a href="/sysuser">用户管理</a><br/>
+<a href="/biz1">业务1</a><br/>
+<a href="/biz2">业务二</a>
 </body>
 </html>
